update home page

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>[Your Name]</title>
+  <title>Lorem Ipsum</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
 
 <body>
   <header>
-    <nav>
-      <ul>
-        <li>
-          <a href="index.html" aria-current="page">Home</a>
+    <nav class="nav-bar">
+      <a href="index.html" aria-current="page">
+        <img src="images/home-icon.webp" alt="Lorem ipsum icon" width="80" height="80"/>
+      </a>
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="intro.html">Intro</a>
         </li>
-        <li>
-          <a href="bio.html">Bio</a>
-        </li>
-        <li>
+        <li class="nav-item">
           <a href="experience.html">Experience</a>
         </li>
-        <li>
+        <li class="nav-item">
           <a href="portfolio.html">Portfolio</a>
         </li>
       </ul>
@@ -30,11 +30,12 @@
   </header>
 
   <main>
-    <h1>[Your Name]</h1>
+    <h1>Lorem Ipsum</h1>
+    <h2><a href="bio.html">Discover</a> the Art of Filler Text_</h2>
   </main>
 
   <footer>
-    <p>Copyright &copy; 2024 [Your Name]</p>
+    <p>Copyright &copy; 2024 Lorem Ipsum</p>
   </footer>
 </body>
 
