--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <main>
     <h1>Lorem Ipsum</h1>
-    <h2><a href="bio.html">Discover</a> the Art of Filler Text_</h2>
+    <h2><a href="intro.html">Discover</a> the Art of Filler Text_</h2>
   </main>
 
   <footer>
