refactor intro page using eventListener

--- a/intro.html
+++ b/intro.html
@@ -57,7 +57,7 @@
         </div>
         <div class="trivia">
             <h2>Lorem Ipsum Trivia</h2>
-            <button id="reveal-btn" class="btn btn-primary" onclick="toggleTrivia()">Click me to reveal</button>
+            <button id="reveal-btn" class="btn btn-primary">Click me to reveal</button>
             <ul id="trivia-list" hidden>
               <li>Lorem Ipsum has been the industry standard since the 1500s.</li>
               <li>It's based on a piece of classical Latin literature by Cicero.</li>
