--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="intro.html">Intro</a>
         </li>
         <li class="nav-item">
-          <a href="experience.html">Experience</a>
+          <a href="how-to.html">How to</a>
         </li>
         <li class="nav-item">
           <a href="portfolio.html">Portfolio</a>
