--- a/intro.html
+++ b/intro.html
@@ -20,7 +20,7 @@
                 <a href="intro.html">Intro</a>
                 </li>
                 <li class="nav-item">
-                <a href="experience.html">Experience</a>
+                <a href="how-to.html">How to</a>
                 </li>
                 <li class="nav-item">
                 <a href="portfolio.html">Portfolio</a>
@@ -30,11 +30,11 @@
     </header>
 
     <main>
-        <div class="hero">
+        <div>
             <h1>What is Lorem Ipsum?</h1>
             <p>A deep dive into the history and importance of the most famous placeholder text.</p>
-            <img src="images/lorem-ipsum-intro.webp" alt="a lady's profile photo constructed by lorem ipsum text" width="500" height="500" />
-        <div>
+            <img src="images/lorem-ipsum-intro.webp" alt="a lady's profile photo constructed by lorem ipsum text"/>
+        </div>
         <div class="history">
             <h2>The Origins</h2>
             <p>
