--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
           <a href="bio.html">Bio</a>
         </li>
         <li>
-          <a href="experience.html">Experience</a>
+          <a href="how-to.html">Experience</a>
         </li>
         <li>
           <a href="portfolio.html" aria-current="page">Portfolio</a>
